--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,17 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "start": "node server.js"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.2",
     "quasar": "^1.0.0",
+    "serve-static": "^1.14.2",
     "vue-croppie": "^2.0.2",
     "vuex-persistedstate": "^4.1.0"
   },
