entorno de produccion

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ psycopg2==2.9.3
 pycparser==2.21
 pydantic==1.9.0
 PyJWT==2.3.0
+python-decouple==3.6
 six==1.16.0
 SQLAlchemy==1.4.31
 typing_extensions==4.0.1
